plano interactivo con servicio de oficinas

--- a/src/app/components/lista-inventario/lista-inventario.component.html
+++ b/src/app/components/lista-inventario/lista-inventario.component.html
@@ -3,7 +3,7 @@
 <vex-page-layout>
   <vex-page-layout-header class="flex flex-col items-start justify-center">
     <div class="w-full flex flex-col sm:flex-row justify-between">
-      <div>>
+      <div>
         <h1 class="title mt-0 mb-1">Productos sin registrar</h1>
         <vex-breadcrumbs [crumbs]="['Productos']"></vex-breadcrumbs>
       </div>
