--- a/src/app/components/lista-ubicaciones/modal-ubicaciones/modal-ubicaciones.component.html
+++ b/src/app/components/lista-ubicaciones/modal-ubicaciones/modal-ubicaciones.component.html
@@ -75,9 +75,9 @@
           <a *ngIf="this.tokenArchivo != ''"
             (click)="abrirDocumento(this.tokenArchivo)"
             href="javascript: void(0)"
-            class="underline underline-offset-1 mt-2 flex justify-center text-sm text-blue-500"
+            class="title mt-2 flex justify-center text-sm text-blue-500"
             id="file_input_help"
-            >Ver Plano</a>
+            >Ver Plano<mat-icon>remove_red_eye</mat-icon> </a>
         </div>
       </div>
     </form>
