--- a/src/app/components/plano-interactivo/modal-plano/modal-plano.component.html
+++ b/src/app/components/plano-interactivo/modal-plano/modal-plano.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center " style="border: none !important" mat-dialog-title >
-  <h2 class="headline m-0 flex-auto">Modal de <b>{{this.propietario}}</b></h2>
+  <h2 class="headline m-0 flex-auto">Oficina de <b>{{this.propietario.nombre}}</b></h2>
   <button></button>
   <!-- <mat-icon  svgIcon="mat:help" matTooltip="El grupo de opciones funciona como un alias o una etiqueta para una lista de opciones."></mat-icon> -->
   <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
