cambios en breadcrumbs

--- a/src/app/components/lista-adquisiciones/lista-adquisiciones.component.html
+++ b/src/app/components/lista-adquisiciones/lista-adquisiciones.component.html
@@ -5,7 +5,7 @@
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
         <h1 class="title mt-0 mb-1">Adquisiciones</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Adquisiciones']"></vex-breadcrumbs>
+        <vex-breadcrumbs [crumbs]="['Adquisiciones']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
