--- a/src/app/components/lista-propietarios/lista-propietarios.component.html
+++ b/src/app/components/lista-propietarios/lista-propietarios.component.html
@@ -5,7 +5,7 @@
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
         <h1 class="title mt-0 mb-1">Propietarios</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Propietarios']"></vex-breadcrumbs>
+        <vex-breadcrumbs [crumbs]="['Propietarios']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
