--- a/src/app/components/crear-plano/crear-plano.component.html
+++ b/src/app/components/crear-plano/crear-plano.component.html
@@ -3,7 +3,7 @@
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
         <h1 class="title mt-0 mb-1">Plano</h1>
-        <vex-breadcrumbs [crumbs]="['Home','Crear']"></vex-breadcrumbs>
+        <vex-breadcrumbs [crumbs]="['Ubicaciones','Crear Plano']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
