--- a/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
+++ b/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
@@ -5,7 +5,7 @@
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
         <h1 class="title mt-0 mb-1">Categoria Producto</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Categoria Producto']"></vex-breadcrumbs>
+        <vex-breadcrumbs [crumbs]="['Categoria Producto']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
@@ -122,7 +122,7 @@
                   >
                     Categoria Producto
                   </span>
-                </div>   
+                </div>
                 <div class="text-center">
                   <span class="font-bold">Nombre</span>: {{ item.nombre }}
                 </div>
