--- a/src/app/components/lista-productos/lista-productos.component.html
+++ b/src/app/components/lista-productos/lista-productos.component.html
@@ -5,7 +5,7 @@
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
         <h1 class="title mt-0 mb-1">Productos</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Productos']"></vex-breadcrumbs>
+        <vex-breadcrumbs [crumbs]="['Productos']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
