--- a/src/app/components/plano-interactivo/plano-interactivo.component.html
+++ b/src/app/components/plano-interactivo/plano-interactivo.component.html
@@ -3,7 +3,7 @@
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
         <h1 class="title mt-0 mb-1">Plano intereactivo de oficinas del cliente {{this.cliente.cliente}} en el edificio {{this.cliente.edificio}} y piso {{this.cliente.piso}}</h1>
-        <vex-breadcrumbs [crumbs]="['Home','Plano']"></vex-breadcrumbs>
+        <vex-breadcrumbs [crumbs]="['Ubicaciones','Crear Plano']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
