--- a/src/app/components/lista-productos/modal-producto/modal-producto.component.html
+++ b/src/app/components/lista-productos/modal-producto/modal-producto.component.html
@@ -175,6 +175,8 @@
         <mat-icon svgIcon="mat:add"></mat-icon>
       </button>
         </div>
+
+        {{this.listaCaracteristicas | json}}
       </form>
 
       <div class="relative shadow-md sm:rounded-lg">
